# gmem-worker

./: .GmemWorker.gmem.json  .gitignore  README.md
AppProjects/gmem_rust_memory_store/: .gitignore  Cargo.toml  README-zh.md  README.md  build.rs  build_all.ps1  build_and_rename.ps1  icon.rc  test_regex.rs
AppProjects/gmem_rust_memory_store/docs/: gmem_rust_memory_store项目设计.md  modification_list.md  todo.md
AppProjects/gmem_rust_memory_store/src/: cli.rs  compress.rs  config.rs  direct_organize.rs  keywords.rs  lib.rs  lock.rs  logs.rs  main.rs  mcp_serialization.rs  mcp_server.rs  md_processor.rs  organize_memory.rs  read_memory.rs  record.rs  store.rs  timestamp.rs
AppProjects/rust_disk_cleaner/: .gitignore  Cargo.toml  README.md  build.bat  compile.cmd
AppProjects/rust_disk_cleaner/src/: cleaner.rs  config.rs  main.rs  report.rs  rules.rs  scanner.rs  utils.rs
AppProjects/rust_disk_cleaner/test_run/config/: default_config.toml
docs/: C盘无用文件快速清理工具-Rust实现.md  gmem_rust_memory_store项目设计.md  如何使用Gmem项目进行全局记忆管理.md
ralph/: PROMPT.md
