[package]
name = "gmem_rust_memory_store"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Copilot Memory Store with high performance and type safety"
license = "MIT"
repository = "https://github.com/aspnmy/copilot-memory-store"
build = "build.rs"

[build-dependencies]
chrono = "0.4"
winres = "0.1.12"
embed-resource = "1.5.1"

[dependencies]
chrono = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lazy_static = "1.4"
regex = "1.10"
getrandom = "0.2"
fastrand = "2.0"
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
dirs = "5.0"

[features]
default = []
async = ["tokio"]
llm = ["reqwest"]
full = ["async", "llm"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "GmemoryStore"
path = "src/main.rs"

[[bin]]
name = "gmemory-mcp-server"
path = "src/mcp_server.rs"
required-features = ["full"]

[lib]
name = "gmem_rust_memory_store"
path = "src/lib.rs"
